@@ -4,12 +4,13 @@ Pending changes in the mainline
 * SeriesList: 
   - display the SeriesNumber tag in front of image count.
   - order series by SeriesNumber
-  - hide non displayable series (PR, SR)
+  - don't show non displayable series (see "SkipSeriesFromModalities")
 * In the top right overlay, display ContentDate/ContentTime if they are 
   available in the instance.  If not, StudyDate is displayed (previous
   behavior)
 * New configuration options:
   - "TimeFormat" to control the way Dicom Times are displayed.
+  - "SkipSeriesFromModalities" to ignore series from given modality types.
 
 
 Version 2.2 (2021-08-31)
